# nachet-model-ccds

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  requirements-frozen.txt  requirements.txt
environments/azurevm/: startup.sh
environments/pytorch-gpu-24/: .env.template  Dockerfile  Readme.md  docker-compose.yaml  docker_compose.yaml  requirements-frozen.txt
environments/seed-detector/: docker_compose.yaml
environments/torchserve/: Readme.md  serve.sh
environments/triton/: 27spp_model_1.gpu.compose.yaml
logs/: 15spp_zoom_level_validation_models.err  27spp_model.err
nachetmodel/: CheckpointExporter.py  EvalSummary.py  ExportValidator.py  HFTrainer.py  HFTrainer_js.py  ModelEvaluator.py  __init__.py  dataset.py  features.py  freeze_requirements.py  plots.py
nachetmodel/modeling/: predict.py  train.py
notebooks/: .env.config.15spp_zoom_level_validation_models  .env.config.27spp_model  .env.template  01_detect_obj_split_images.ipynb  1.01_js_detect_obj_split_images.ipynb  3.01_js_base_model.ipynb  3.01_js_eval_launcher.sh  3.01_js_launcher.sh  3.01_js_train_launcher.sh  3.02_js_train_15spp_1_seed_zoom_20250129.sh  3.02_js_train_15spp_1seed_zoom.sh  3.03_js_model_evaluator.ipynb  3.03_js_model_evaluator_500.ipynb  3.03_js_model_evaluator_88.ipynb  3.04_js_eval_summary.ipynb  4.01_js_checkpoint_export.ipynb  4.01_js_checkpoint_export.sh  4.01_js_evaluate_1_seed_zoom_20250127.sh  4.01_js_evaluate_1_seed_zoom_20250128.sh  4.01_js_evaluate_1_seed_zoom_20250129.sh  4.02_js_export_validator.ipynb  commands.md  continue_template.sh  train_template.sh
(+49 files in other folders)
