[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nachetmodel"
version = "0.0.1"
description = "Vision Models for Seed Classification"
authors = [
  { name = "CFIA/ACIA/AILAB" },
]
dependencies = [
  "ruff",
  "isort",
  "loguru",
  "pip",
  "python-dotenv",
  "tqdm",
  "typer",
  "nbconvert",
  "scikit-learn",
  "nbqa",
  "seaborn",
  "mypy",
  "pytest",
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

